# contextos

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_enable_vector_extension.py  0002_auth_tenant_isolation.py  0003_document_library.py  0004_retrieval_chat_usage.py  0005_conversation_document_scope.py  0006_user_controlled_memory.py
backend/src/contextos/: main.py  worker.py
backend/src/contextos/api/: __init__.py  dependencies.py  errors.py  router.py
backend/src/contextos/auth/: errors.py  jwt.py  principal.py
backend/src/contextos/cli/: __init__.py  __main__.py  bootstrap_admin.py
backend/src/contextos/core/: __init__.py  config.py  logging.py  request_id.py
backend/src/contextos/domain/: ai.py  chat.py  dashboard.py  document_ingestion.py  documents.py  invitations.py  memories.py  preferences.py  users.py  workspace_state.py
backend/src/contextos/evaluation/: __init__.py  run.py
backend/src/contextos/infrastructure/: __init__.py  (+4 more)
backend/tests/: bootstrap_test_database.py  conftest.py  support.py
backend/tests/api/: test_conversations.py  test_documents.py  test_system_routes.py
backend/tests/integration/: test_infrastructure.py  test_migrations.py
backend/tests/security/: test_document_rls.py  test_public_user_provisioning.py  test_rls_tenant_isolation.py
backend/tests/unit/: test_ai.py  test_chat_hardening.py  test_config.py  test_document_storage.py  test_evaluation.py  test_jwt_verifier.py  test_logging.py  test_request_id.py
(+157 files in other folders)
