[build-system]
requires = ["hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[project]
name = "contextos-backend"
version = "0.1.0"
description = "ContextOS backend foundation"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.116.0,<0.117.0",
  "httpx>=0.28.0,<0.29.0",
  "pyjwt[crypto]>=2.10.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "pypdf>=6.0.0,<7.0.0",
  "python-multipart>=0.0.20,<0.1.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "redis>=6.2.0,<7.0.0",
  "rq>=2.6.0,<3.0.0",
  "sqlalchemy>=2.0.40,<2.1.0",
  "uvicorn>=0.35.0,<0.36.0",
]

[dependency-groups]
dev = [
  "mypy>=1.17.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "ruff>=0.12.0,<0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contextos"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
asyncio_mode = "auto"
cache_dir = "tmp/pytest-cache"
markers = [
  "integration: tests that require live PostgreSQL and Redis services",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
exclude = [
  "^alembic/versions/",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = true
